Code/Network Policies/3/NetworkPolicy_3.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allowing-traffic-from-other-namespaces
spec:
  podSelector:
    matchLabels:
      app: backend
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          tenant: web
    - namespaceSelector:
        matchLabels:
          tenant: dev
