Code/Network Policies/3/NetworkPolicy_9.yaml
# It allows all traffic for all pods in a default namespace

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
spec:
  podSelector: {}
  ingress:
  - {}
